Add Google site verification meta tag

--- a/themes/next/layout/_layout.njk
+++ b/themes/next/layout/_layout.njk
@@ -52,6 +52,7 @@
   <meta name="360-site-verification" content="0b6524e504a2c1865c05f4b983107d7c" />
   <meta name="yandex-verification" content="8c5995dc66b40cd5" />
   <meta name="msvalidate.01" content="94CC12F9EBDBD5361337329096B6444A" />
+  <meta name="google-site-verification" content="XbIJi2VgCSSSChuFrq9PuP6yybHvXTUCGsV9oe2ZRf4" />
 
   <!-- 资源预加载与站点图标 -->
   <link rel="prefetch" as="image" href="https://boringbay.com/api/badge/jackie.openenet.cn">
